--- a/data.ipynb
+++ b/data.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,6 +371,230 @@
     "\n",
     "with open(\"trained_model.pkl\", \"wb\") as f:\n",
     "    pkl.dump(dt, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             timestamp  unit_id           unit_type  location_x  location_y  \\\n",
+      "0  2023-06-03 03:19:15   919214        tie_silencer         2.0         5.0   \n",
+      "1  2023-02-24 13:50:40  9467154        stormtrooper         9.0         0.0   \n",
+      "2  2023-03-29 19:54:55  6585778        tie_silencer         0.0         6.0   \n",
+      "3  2023-04-30 00:58:11  3878023        tie_silencer         4.0         2.0   \n",
+      "4  2023-04-10 22:00:26  5537117               at-st         6.0         8.0   \n",
+      "5  2023-04-06 19:26:03  5893460              x-wing         2.0         7.0   \n",
+      "6  2023-03-05 22:52:50  8653686        tie_silencer         6.0         9.0   \n",
+      "7  2023-03-26 10:26:45  6880282        tie_silencer         9.0         1.0   \n",
+      "8  2023-02-24 10:42:24  9478496  resistance_soldier         1.0         3.0   \n",
+      "9  2023-05-10 22:57:10  2930983        tie_silencer         8.0         0.0   \n",
+      "\n",
+      "   destination_x  destination_y    homeworld  \n",
+      "0              9              3  Aleen Minor  \n",
+      "1              9              1    Malastare  \n",
+      "2              5              9      Serenno  \n",
+      "3              9              9         Tund  \n",
+      "4              5              8        Skako  \n",
+      "5              6              5      Troiken  \n",
+      "6              1              9      Sullust  \n",
+      "7              7              2      Troiken  \n",
+      "8              3              8      Stewjon  \n",
+      "9              1              9      Quermia  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyarrow as pa\n",
+    "import fastparquet as fp\n",
+    "\n",
+    "df_1m = pd.read_csv(\"troop_movements_1m.csv\")\n",
+    "\n",
+    "print(df_1m.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1m.loc[df_1m[\"unit_type\"] == \"invalid_unit\", \"unit_type\"] = \"unknown\"\n",
+    "\n",
+    "df_1m['location_x'] = df_1m['location_x'].bfill()\n",
+    "df_1m['location_y'] = df_1m['location_y'].bfill()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No invalid units found in the DataFrame.\n",
+      "Missing location_x values: 0 out of 1000000 rows (0.00%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "has_invalid = (df_1m[\"unit_type\"] == \"invalid_unit\").any()\n",
+    "\n",
+    "if has_invalid:\n",
+    "    sample_invalid = df_1m[df_1m[\"unit_type\"] == \"invalid_unit\"].sample(min(5, len(df_1m[df_1m[\"unit_type\"] == \"invalid_unit\"])))\n",
+    "    print(\"Sample of rows with invalid units:\")\n",
+    "    print(sample_invalid)\n",
+    "else:\n",
+    "    print(\"No invalid units found in the DataFrame.\")\n",
+    "\n",
+    "missing_count = df_1m[\"location_x\"].isna().sum()\n",
+    "total_rows = len(df_1m)\n",
+    "missing_percentage = (missing_count / total_rows) * 100\n",
+    "\n",
+    "print(f\"Missing location_x values: {missing_count} out of {total_rows} rows ({missing_percentage:.2f}%)\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp.write('troop_movements_1m.parquet', df_1m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('trained_model.pkl', 'rb') as f:\n",
+    "    dt = pkl.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "parquet_file = fp.ParquetFile('troop_movements_1m.parquet')\n",
+    "cleaned_df = parquet_file.to_pandas()\n",
+    "\n",
+    "print(type(cleaned_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             timestamp  unit_id           unit_type  location_x  location_y  \\\n",
+      "0  2023-06-03 03:19:15   919214        tie_silencer         2.0         5.0   \n",
+      "1  2023-02-24 13:50:40  9467154        stormtrooper         9.0         0.0   \n",
+      "2  2023-03-29 19:54:55  6585778        tie_silencer         0.0         6.0   \n",
+      "3  2023-04-30 00:58:11  3878023        tie_silencer         4.0         2.0   \n",
+      "4  2023-04-10 22:00:26  5537117               at-st         6.0         8.0   \n",
+      "5  2023-04-06 19:26:03  5893460              x-wing         2.0         7.0   \n",
+      "6  2023-03-05 22:52:50  8653686        tie_silencer         6.0         9.0   \n",
+      "7  2023-03-26 10:26:45  6880282        tie_silencer         9.0         1.0   \n",
+      "8  2023-02-24 10:42:24  9478496  resistance_soldier         1.0         3.0   \n",
+      "9  2023-05-10 22:57:10  2930983        tie_silencer         8.0         0.0   \n",
+      "\n",
+      "   destination_x  destination_y    homeworld  \n",
+      "0              9              3  Aleen Minor  \n",
+      "1              9              1    Malastare  \n",
+      "2              5              9      Serenno  \n",
+      "3              9              9         Tund  \n",
+      "4              5              8        Skako  \n",
+      "5              6              5      Troiken  \n",
+      "6              1              9      Sullust  \n",
+      "7              7              2      Troiken  \n",
+      "8              3              8      Stewjon  \n",
+      "9              1              9      Quermia  \n",
+      "(1000000,)\n",
+      "[False False False False False False  True False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "X = pd.get_dummies(cleaned_df[['homeworld', 'unit_type']])\n",
+    "predictions = dt.predict(X)\n",
+    "\n",
+    "print(cleaned_df.head(10))\n",
+    "print(predictions[0 : 10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              timestamp  unit_id           unit_type  location_x  location_y  \\\n",
+      "0   2023-06-03 03:19:15   919214        tie_silencer         2.0         5.0   \n",
+      "1   2023-02-24 13:50:40  9467154        stormtrooper         9.0         0.0   \n",
+      "2   2023-03-29 19:54:55  6585778        tie_silencer         0.0         6.0   \n",
+      "3   2023-04-30 00:58:11  3878023        tie_silencer         4.0         2.0   \n",
+      "4   2023-04-10 22:00:26  5537117               at-st         6.0         8.0   \n",
+      "5   2023-04-06 19:26:03  5893460              x-wing         2.0         7.0   \n",
+      "6   2023-03-05 22:52:50  8653686        tie_silencer         6.0         9.0   \n",
+      "7   2023-03-26 10:26:45  6880282        tie_silencer         9.0         1.0   \n",
+      "8   2023-02-24 10:42:24  9478496  resistance_soldier         1.0         3.0   \n",
+      "9   2023-05-10 22:57:10  2930983        tie_silencer         8.0         0.0   \n",
+      "10  2023-03-17 19:15:32  7629318         tie_fighter         5.0         6.0   \n",
+      "11  2023-04-27 21:09:16  4065330               at-at         0.0         7.0   \n",
+      "12  2023-05-04 23:32:50  3449379               at-at         6.0         3.0   \n",
+      "13  2023-04-22 14:52:23  4521826              x-wing         5.0         3.0   \n",
+      "14  2023-02-24 14:57:23  9463134         tie_fighter         2.0         2.0   \n",
+      "\n",
+      "    destination_x  destination_y     homeworld  predictions  \n",
+      "0               9              3   Aleen Minor        False  \n",
+      "1               9              1     Malastare        False  \n",
+      "2               5              9       Serenno        False  \n",
+      "3               9              9          Tund        False  \n",
+      "4               5              8         Skako        False  \n",
+      "5               6              5       Troiken        False  \n",
+      "6               1              9       Sullust         True  \n",
+      "7               7              2       Troiken        False  \n",
+      "8               3              8       Stewjon        False  \n",
+      "9               1              9       Quermia        False  \n",
+      "10              4              4     Trandosha        False  \n",
+      "11              2              4  Concord Dawn        False  \n",
+      "12              6              1       Serenno        False  \n",
+      "13              4              3         Zolan        False  \n",
+      "14              0              1      Kashyyyk         True  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add predictions to your DataFrame\n",
+    "cleaned_df['predictions'] = predictions\n",
+    "\n",
+    "print(cleaned_df.head(15))"
    ]
   }
  ],
